syntax = "proto3";

package pb.kyc;

option go_package = "server/proto/v2/pbkyc";

import "google/api/annotations.proto";
import "google/protobuf/any.proto";

service Api {
  rpc SetProcess (SetRequestProcess) returns (ResponseProcess) {
    option (google.api.http) = {
      post: "/v2/verification/set-process",
      body: "*"
    };
  }
  rpc SetCallback (SetRequestCallback) returns (ResponseCallback) {
    option (google.api.http) = {
      post: "/v2/verification/set-callback",
      body: "*"
    };
  }
  rpc SetCanceled (SetRequestCanceled) returns (ResponseCanceled) {
    option (google.api.http) = {
      post: "/v2/verification/set-canceled",
      body: "*"
    };
  }
  rpc GetApplicant (GetRequestApplicant) returns (ResponseApplicant) {
    option (google.api.http) = {
      post: "/v2/verification/get-applicant",
      body: "*"
    };
  }
  rpc GetStatus (GetRequestStatus) returns (ResponseStatus) {
    option (google.api.http) = {
      post: "/v2/verification/get-status",
      body: "*"
    };
  }
  rpc GetPrivilege (GetRequestPrivilege) returns (ResponsePrivilege) {
    option (google.api.http) = {
      post: "/v2/verification/get-privilege",
      body: "*"
    };
  }
}

// KYC structure.
message SetRequestCanceled {}
message ResponseCanceled {
  bool success = 1;
}
message GetRequestPrivilege {}
message ResponsePrivilege {
  map<string, int32> multiplication = 1;
}
message FormResponse {
  string form_id = 1;
  string form_url = 2;
  string verification_id = 3;
}
message GetRequestApplicant {
  string id = 1;
}
message Document {
  string document_id = 1;
  string type = 2;
  string provider = 3;
  string status = 4;
  string document_number = 5;
  string issue_date = 6;
  string expiry_date = 7;
  repeated string income_sources = 8;
  string front_side_id = 9;
  string front_side = 10;
  int32 front_side_size = 11;
  string back_side_id = 12;
  string back_side = 13;
  int32 back_side_size = 14;
  string created_at = 15;
  repeated string decline_reasons = 16;
}
message ResponseApplicant {
  string applicant_id = 1;
  google.protobuf.Any external_applicant_id = 2;
  string type = 3;
  string created_at = 4;
  string profile_status = 5;
  string profile_comment = 6;
  string first_name = 7;
  google.protobuf.Any origin_first_name = 8;
  google.protobuf.Any middle_name = 9;
  google.protobuf.Any origin_middle_name = 10;
  string last_name = 11;
  google.protobuf.Any origin_last_name = 12;
  string residence_country = 13;
  string dob = 14;
  string gender = 15;
  string email = 16;
  string phone = 17;
  google.protobuf.Any wallet_address = 18;
  google.protobuf.Any telegram_username = 19;
  google.protobuf.Any pep = 20;
  google.protobuf.Any custom_field_1 = 21;
  google.protobuf.Any custom_field_2 = 22;
  google.protobuf.Any custom_field_3 = 23;
  google.protobuf.Any custom_field_4 = 24;
  google.protobuf.Any custom_field_5 = 25;
  repeated google.protobuf.Any decline_reasons = 26;
  repeated google.protobuf.Any addresses = 27;
  repeated Document documents = 28;
  string verification_status = 29;
  string verifications_count = 30;
}
message Verifications {
  KycProfile profile = 1;
  KycDocument document = 2;
}
message KycProfile {
  bool verified = 1;
  string comment = 2;
  repeated string decline_reasons = 3;
}
message KycDocument {
  bool verified = 1;
  string comment = 2;
  repeated string decline_reasons = 3;
}
message SetRequestCallback {
  string request_id = 1;
  string type = 2;
  string verification_id = 3;
  string applicant_id = 4;
  string status = 5;
  bool verified = 6;
  Verifications verifications = 7;
}
message ResponseCallback {
  int64 id = 1;
  string status = 2;
  repeated string messages = 3;
}
message SetRequestProcess {
  string form = 1;
  string level = 2;
}
message ResponseProcess {
  string form_id = 1;
  string form_url = 2;
  string verification_id = 3;
}
message GetRequestStatus {
  int64 id = 1;
}
message ResponseStatus {
  bool secure = 1;
  bool process = 2;
  string level = 3;
}